--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <h1>Universal Declaration of Human Rights</h1>
-  <h2>Preamble</h2>
+  <main><h2>Preamble</h2></main>
   <p>
     Whereas recognition of the inherent dignity and of the equal and inalienable
     rights of all members of the human family is the foundation of freedom, justice
